@@ -4,7 +4,7 @@ import errno
 import json
 import os
 import shutil
-#import ssl
+# import ssl
 import sqlite3
 import sys
 import threading
@@ -18,7 +18,7 @@ from subprocess import Popen, PIPE
 
 # TODO
 #      - TLS
-app = Flask(__name__, static_url_path=os.path.dirname(os.path.abspath(__file__)))
+app = Flask(__name__)
 api = Api(app)
 
 parser = reqparse.RequestParser()
@@ -37,7 +37,8 @@ parser.add_argument('password')
 parser.add_argument('user_file')
 parser.add_argument('password_file')
 
-class RunThreads (threading.Thread):
+
+class RunThreads(threading.Thread):
     def __init__(self, tool, job, context):
         threading.Thread.__init__(self)
         self.tool_stdout = ''
@@ -60,21 +61,21 @@ class RunThreads (threading.Thread):
         # Zip resulting directory - This is crap because when doing assessment
         # this will be run at each tool execution.
         zip_file = os.path.dirname(os.path.abspath(__file__)) + \
-            "/" + job['target_name'] + '_' + str(job['id'])
+                   "/" + job['target_name'] + '_' + str(job['id'])
         shutil.make_archive(zip_file, 'zip', job['output_dir'])
 
         # Update completed and return_code field in db
         con = sqlite3.connect(os.path.dirname(os.path.abspath(__file__)) + '/assets.db')
         cur = con.cursor()
         if context == 'tool':
-            cur.execute("UPDATE tool_jobs SET executed = 1, return_code = ?, zip_file = ? WHERE id = ?",(str(return_code),str(zip_file),str(job['id'])))
+            cur.execute("UPDATE tool_jobs SET executed = 1, return_code = ?, zip_file = ? WHERE id = ?", (str(return_code), str(zip_file), str(job['id'])))
             con.commit()
         if context == 'assessment':
             # Pull and check for 0
-            cur.execute("SELECT return_code FROM assessment_jobs WHERE id = ? AND return_code == 0",(str(job['id'])))
+            cur.execute("SELECT return_code FROM assessment_jobs WHERE id = ? AND return_code == 0", (str(job['id'])))
             data = cur.fetchall()
             if len(data) == 0 or data[0][0] == 0:
-                cur.execute("UPDATE assessment_jobs SET executed = 1, return_code = ?, zip_file = ? WHERE id = ?",(str(return_code),str(zip_file),str(job['id'])))
+                cur.execute("UPDATE assessment_jobs SET executed = 1, return_code = ?, zip_file = ? WHERE id = ?", (str(return_code), str(zip_file), str(job['id'])))
                 con.commit()
 
         # Close connection
@@ -84,9 +85,11 @@ class RunThreads (threading.Thread):
     def run(self):
         self.execute_tool(self.job, self.context)
 
+
 class Pong(Resource):
     def get(self):
-        return { 'message':'pong' }
+        return {'message': 'pong'}
+
 
 class Assessments(Resource):
     # Get assessments
@@ -98,14 +101,14 @@ class Assessments(Resource):
 
         # If /assessments?search=xxx not specified then SELECT *
         if args['search'] != None:
-            cur.execute("SELECT * FROM assessments WHERE name LIKE ? OR description LIKE ?",('%' + args['search'] + '%','%' + args['search'] + '%'))
+            cur.execute("SELECT * FROM assessments WHERE name LIKE ? OR description LIKE ?", ('%' + args['search'] + '%', '%' + args['search'] + '%'))
         else:
             cur.execute("SELECT * FROM assessments")
         data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Add tools to assessment
         for i, assessment in enumerate(data['result']):
-            cur.execute("SELECT tool FROM assessment_tools WHERE assessment = ?",(str(i+1),))
+            cur.execute("SELECT tool FROM assessment_tools WHERE assessment = ?", (str(i + 1),))
             tool_ids = dict(result=[dict(r) for r in cur.fetchall()])
             assessment['tools'] = tool_ids['result']
 
@@ -119,6 +122,7 @@ class Assessments(Resource):
         args = parser.parse_args()
         return args
 
+
 class AssessmentsId(Resource):
     # Get assessments
     def get(self, assessment_id):
@@ -127,11 +131,11 @@ class AssessmentsId(Resource):
         con.row_factory = sqlite3.Row
         cur = con.cursor()
 
-        cur.execute("SELECT * FROM assessments WHERE id = ?",(assessment_id),)
+        cur.execute("SELECT * FROM assessments WHERE id = ?", (assessment_id), )
         data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Add tools to assessment
-        cur.execute("SELECT tool FROM assessment_tools WHERE assessment = ?",(str(assessment_id),))
+        cur.execute("SELECT tool FROM assessment_tools WHERE assessment = ?", (str(assessment_id),))
         tool_ids = dict(result=[dict(r) for r in cur.fetchall()])
         data['result'][0]['tools'] = tool_ids['result']
 
@@ -139,6 +143,7 @@ class AssessmentsId(Resource):
         if con:
             con.close()
         return data
+
 
 class Tools(Resource):
     # Get tools
@@ -150,7 +155,7 @@ class Tools(Resource):
 
         # If /tools?search=xxx not specified then SELECT *
         if args['search'] != None:
-            cur.execute("SELECT * FROM tools WHERE name LIKE ? OR description LIKE ?",('%' + args['search'] + '%','%' + args['search'] + '%'))
+            cur.execute("SELECT * FROM tools WHERE name LIKE ? OR description LIKE ?", ('%' + args['search'] + '%', '%' + args['search'] + '%'))
         else:
             cur.execute("SELECT * FROM tools")
         data = dict(result=[dict(r) for r in cur.fetchall()])
@@ -165,6 +170,7 @@ class Tools(Resource):
         args = parser.parse_args()
         return args
 
+
 class ToolsId(Resource):
     # Get tools
     def get(self, tool_id):
@@ -173,7 +179,7 @@ class ToolsId(Resource):
         con.row_factory = sqlite3.Row
         cur = con.cursor()
 
-        cur.execute("SELECT * FROM tools WHERE id =?",(tool_id,))
+        cur.execute("SELECT * FROM tools WHERE id =?", (tool_id,))
         data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Close connection
@@ -186,9 +192,10 @@ class ToolsId(Resource):
         args = parser.parse_args()
         return args
 
+
 class ToolsJobs(Resource):
     # List jobs
-    def get (self):
+    def get(self):
         args = parser.parse_args()
         con = sqlite3.connect(os.path.dirname(os.path.abspath(__file__)) + '/assets.db')
         con.row_factory = sqlite3.Row
@@ -196,9 +203,12 @@ class ToolsJobs(Resource):
 
         # If /jobs?search=xxx not specified then SELECT *
         if args['search'] != None:
-           cur.execute("SELECT * FROM tool_jobs WHERE tool LIKE ? OR target LIKE ? OR target_name LIKE ? OR protocol LIKE ? OR port_number LIKE ? OR user like ? OR password LIKE ? OR user_file LIKE ? OR password_file LIKE ?",('%' + args['search'] + '%','%' + args['search'] + '%','%' + args['search'] + '%','%' + args['search'] + '%','%' + args['search'] + '%','%' + args['search'] + '%','%' + args['search'] + '%','%' + args['search'] + '%','%' + args['search'] + '%'))
+            cur.execute(
+                "SELECT * FROM tool_jobs WHERE tool LIKE ? OR target LIKE ? OR target_name LIKE ? OR protocol LIKE ? OR port_number LIKE ? OR user like ? OR password LIKE ? OR user_file LIKE ? OR password_file LIKE ?",
+                ('%' + args['search'] + '%', '%' + args['search'] + '%', '%' + args['search'] + '%', '%' + args['search'] + '%', '%' + args['search'] + '%', '%' + args['search'] + '%',
+                 '%' + args['search'] + '%', '%' + args['search'] + '%', '%' + args['search'] + '%'))
         else:
-           cur.execute("SELECT * FROM tool_jobs")
+            cur.execute("SELECT * FROM tool_jobs")
         data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Close connection
@@ -214,7 +224,8 @@ class ToolsJobs(Resource):
         cur = con.cursor()
 
         # curl -i --data "tool=1&target=localhost&target_name=target_name&protocol=https&port_number=1337&user=a_user&password=a_password&user_file=/user/file&password_file=/password/file" http://127.0.0.1:5000/jobs
-        cur.execute("INSERT INTO tool_jobs(tool,target,target_name,protocol,port_number,user,password,user_file,password_file) VALUES(?,?,?,?,?,?,?,?,?)",(args['tool'],args['target'],args['target_name'],args['protocol'],args['port_number'],args['user'],args['password'],args['user_file'],args['password_file']))
+        cur.execute("INSERT INTO tool_jobs(tool,target,target_name,protocol,port_number,user,password,user_file,password_file) VALUES(?,?,?,?,?,?,?,?,?)",
+                    (args['tool'], args['target'], args['target_name'], args['protocol'], args['port_number'], args['user'], args['password'], args['user_file'], args['password_file']))
         data = cur.lastrowid
         con.commit()
 
@@ -222,7 +233,8 @@ class ToolsJobs(Resource):
         if con:
             con.close()
 
-        return { 'id':data }, 201
+        return {'id': data}, 201
+
 
 # List individual jobs
 class ToolsJobsId(Resource):
@@ -231,7 +243,7 @@ class ToolsJobsId(Resource):
         con.row_factory = sqlite3.Row
         cur = con.cursor()
 
-        cur.execute("SELECT * FROM tool_jobs WHERE id = ?",(job_id,))
+        cur.execute("SELECT * FROM tool_jobs WHERE id = ?", (job_id,))
         data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Close connection
@@ -239,6 +251,7 @@ class ToolsJobsId(Resource):
             con.close()
 
         return data
+
 
 # Execute job
 class ToolsJobsIdExecute(Resource):
@@ -252,7 +265,7 @@ class ToolsJobsIdExecute(Resource):
         cur = con.cursor()
 
         # Get job id columns
-        cur.execute("SELECT * FROM tool_jobs WHERE id = ?",(args['id'],))
+        cur.execute("SELECT * FROM tool_jobs WHERE id = ?", (args['id'],))
         job_data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Index is now tied to database schema, yuck
@@ -260,7 +273,7 @@ class ToolsJobsIdExecute(Resource):
         tool['id'] = job['tool']
 
         # Get tool execute string and tool name
-        cur.execute("SELECT * FROM tools WHERE id = ?",(tool['id'],))
+        cur.execute("SELECT * FROM tools WHERE id = ?", (tool['id'],))
         tool_data = dict(result=[dict(r) for r in cur.fetchall()])
         tool = tool_data['result'][0]
 
@@ -268,26 +281,26 @@ class ToolsJobsIdExecute(Resource):
         job['tools_directory'] = "/root/tools"
         job['date'] = strftime("%Y%m%d_%H%M%S%z")
         job['output_dir'] = os.path.dirname(os.path.abspath(__file__)) + \
-                                '/' + strftime("%Y%m%d") + \
-                                "_autopwn_" + \
-                                job_data['result'][0]['target_name'] + \
-                                "_" + tool['name']
+                            '/' + strftime("%Y%m%d") + \
+                            "_autopwn_" + \
+                            job_data['result'][0]['target_name'] + \
+                            "_" + tool['name']
         try:
             os.makedirs(job['output_dir'])
         except OSError as e:
             pass
-            #if e.errno == errno.EEXIST:
+            # if e.errno == errno.EEXIST:
             #    return {'message':'Directory exists'}, 500
 
         # Get dependencies
-        cur.execute("SELECT dependency from dependencies WHERE tool = ?",(tool['id'],))
+        cur.execute("SELECT dependency from dependencies WHERE tool = ?", (tool['id'],))
         dependency = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Close connection
         if con:
             con.close()
 
-        ddict_options = defaultdict(lambda:'')
+        ddict_options = defaultdict(lambda: '')
         for option in job:
             ddict_options[option] = job[option]
 
@@ -296,13 +309,14 @@ class ToolsJobsIdExecute(Resource):
 
         thread = []
         # Tool string generated, execute
-        thread.append(RunThreads(tool,job,'tool'))
+        thread.append(RunThreads(tool, job, 'tool'))
         # If main process dies, everything else *SHOULD* as well
         thread[-1].daemon = True
         # Start threads
         thread[-1].start()
 
-        return {'message':'Tool executed'}, 201
+        return {'message': 'Tool executed'}, 201
+
 
 class Dependencies(Resource):
     def get(self):
@@ -319,6 +333,7 @@ class Dependencies(Resource):
 
         return data
 
+
 class Options(Resource):
     def get(self):
         con = sqlite3.connect(os.path.dirname(os.path.abspath(__file__)) + '/assets.db')
@@ -334,6 +349,7 @@ class Options(Resource):
 
         return data
 
+
 # Retrieve options for tool
 class OptionsId(Resource):
     def get(self, tool_id):
@@ -341,7 +357,7 @@ class OptionsId(Resource):
         con.row_factory = sqlite3.Row
         cur = con.cursor()
 
-        cur.execute("SELECT option, required FROM tool_options WHERE tool = ?",(tool_id,))
+        cur.execute("SELECT option, required FROM tool_options WHERE tool = ?", (tool_id,))
         data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Close connection
@@ -349,6 +365,7 @@ class OptionsId(Resource):
             con.close()
 
         return data
+
 
 class ToolsExports(Resource):
     def get(self):
@@ -366,6 +383,7 @@ class ToolsExports(Resource):
 
         return data
 
+
 # Retrieve output for job id
 class ToolsExportsId(Resource):
     def get(self, job_id):
@@ -373,7 +391,7 @@ class ToolsExportsId(Resource):
         con.row_factory = sqlite3.Row
         cur = con.cursor()
 
-        cur.execute("SELECT zip_file FROM tool_jobs WHERE id = ?",(job_id,))
+        cur.execute("SELECT zip_file FROM tool_jobs WHERE id = ?", (job_id,))
         data = dict(result=[dict(r) for r in cur.fetchall()])
         zip_file = data['result'][0]['zip_file'] + '.zip'
 
@@ -383,6 +401,7 @@ class ToolsExportsId(Resource):
 
         return send_file(zip_file, as_attachment=True)
 
+
 # Retrieve dependencies for tool
 class DependenciesId(Resource):
     def get(self, tool_id):
@@ -390,7 +409,7 @@ class DependenciesId(Resource):
         con.row_factory = sqlite3.Row
         cur = con.cursor()
 
-        cur.execute("SELECT dependency FROM dependencies WHERE tool = ?",(tool_id,))
+        cur.execute("SELECT dependency FROM dependencies WHERE tool = ?", (tool_id,))
         data = dict(result=[dict(r) for r in cur.fetchall()])
 
         # Close connection
@@ -398,6 +417,7 @@ class DependenciesId(Resource):
             con.close()
 
         return data
+
 
 # Pong!
 # curl -i http://127.0.0.1:5000/ping
@@ -414,7 +434,6 @@ api.add_resource(Assessments, '/assessments')
 # Fetch assessment id
 # curl -i http://127.0.0.1:5000/assessments/1
 api.add_resource(AssessmentsId, '/assessments/<assessment_id>')
-
 
 # Fetch all tool jobs
 # curl -i http://127.0.0.1:5000/jobs
@@ -446,18 +465,20 @@ api.add_resource(ToolsExports, '/tools/jobs/exports')
 # curl -i http://127.0.0.1:5000/exports/1
 api.add_resource(ToolsExportsId, '/tools/jobs/exports/<job_id>')
 
+
 def main():
     print(os.path.dirname(os.path.abspath(__file__)))
-    #context = ssl.SSLContext(ssl.PROTOCOL_TLSv1_2)
-    #context.load_cert_chain('yourserver.crt', 'yourserver.key')
+    # context = ssl.SSLContext(ssl.PROTOCOL_TLSv1_2)
+    # context.load_cert_chain('yourserver.crt', 'yourserver.key')
 
     if os.path.isfile('/.dockerinit'):
         print("Running in docker")
-        #app.run(host='0.0.0.0', debug=True,threaded=True,ssl_context=context)
-        app.run(host='0.0.0.0', debug=True,threaded=True)
+        # app.run(host='0.0.0.0', debug=True,threaded=True,ssl_context=context)
+        app.run(host='0.0.0.0', debug=True, threaded=True)
     else:
-        #app.run(debug=True,threaded=True,ssl_context=context)
-        app.run(debug=True,threaded=True,port=5000)
+        # app.run(debug=True,threaded=True,ssl_context=context)
+        app.run(debug=True, threaded=True, port=5000)
+
 
 if __name__ == '__main__':
     main()
